# gffy

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  Pipfile  README.md  TODO.md  annotrieve-schema.json  benchmark_stats.py  debug_orphans.py  example.json  performance.txt  pyproject.toml  schema.json  stats.json  stats_refactored copy.json  stats_refactored.json
.github/workflows/: ci.yml  compute-and-validate.yml  publish.yml
data/: schema.json
examples/: mouse-stats-computed.json
gffy/: __init__.py  cli.py  compute_stats.py
gffy/tools/: classes.py  helpers.py
requirements/: ci.txt
scripts/: compute_and_validate.py
src/gffy/: __init__.py  __main__.py  _cli_common.py  _io.py  annotrieve_export.py  bulk.py  cache.py  cli.py  compute_stats.py  convert.py  convert_cli.py  errors.py  schema.json  stats.py
src/gffy/tools/: classes.py  constants.py  helpers.py
tests/: __init__.py  conftest.py  test_annotrieve_export.py  test_bulk.py  test_cli.py  test_compute_stats.py  test_convert.py  test_errors.py  test_low_memory.py  test_production_parity.py  test_stats.py  test_url.py
tests/test_tools/: __init__.py  test_classes.py  test_helpers.py
