[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gffy"
version = "0.1.0"
description = "Fast, low-RAM GFF3/GTF tools: annotrieve-compatible stats, bulk JSONL, GTF-to-GFF3 conversion; large files sorted by seqid (GNU sort) then streamed per-chromosome"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Emilio R", email = "emilio.righi@crg.eu"}
]
maintainers = [
    {name = "Emilio R", email = "emilio.righi@crg.eu"}
]
keywords = [
    "gff3",
    "gtf",
    "gff",
    "genomics",
    "bioinformatics",
    "gene-annotation",
    "transcriptomics",
    "statistics",
    "annotation",
    "converter",
    "gffy-convert",
    "jsonl",
    "low-memory",
    "streaming",
    "large-files",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jsonschema>=4.0",
    "build>=1.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.scripts]
gffy = "gffy.cli:main"
gffy-convert = "gffy.convert_cli:main"

[project.urls]
Homepage = "https://github.com/guigolab/gffy"
Repository = "https://github.com/guigolab/gffy"
Documentation = "https://github.com/guigolab/gffy#readme"
"Bug Tracker" = "https://github.com/guigolab/gffy/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gffy"]

[tool.setuptools.package-data]
gffy = ["py.typed", "schema.json", "annotrieve-schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits external Annotrieve API and remote GFF sources",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

